Alterações no index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <li>Item 5</li>
         <li>Item 6</li>
     </ul>
+    Lista de supermercado
+    <ol>
+        <li>Pão</li>
+        <li>Presunto</li>
+        <li>Queijo</li>
+    </ol>
 
 </body>
 </html>
