--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     Lista de supermercado
     <ol>
         <li>Pão</li>
-        <li>Presunto</li>
+        <li>Presunto - X</li>
         <li>Queijo</li>
     </ol>
 
