--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <li>Item 5</li>
         <li>Item 6</li>
     </ul>
+    Panificadora
+    <ol>
+        <li>Rosca</li>
+        <li>Bolo</li>
+        <li>Pão de queijo</li>
+    </ol>
 
 </body>
 </html>
