--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="global.css">
+
+    <style>
+        p {
+            color: green;
+        }
+        @import url("global.css");
+
+    </style>
+
 </head>
 <body>
     <h1>Página de teste</h1>
